# cv_system

./: .email_processing_report.md  .gitignore  .markdownlint.json  .markdownlintignore  GEMINI.md  README.md  config.example.yaml  package-lock.json  package.json  pyproject.toml  tsconfig.json
job-monitoring/: CHANGELOG.md  README.md  RELEASE_NOTES_v1.0.0.md  config.example.yaml  config.yaml  pyproject.toml  rescore_jobs.py  search_config.yaml
job-monitoring/candidates/: .markdownlint.json
job-monitoring/candidates/2025-12-01/: TOP_10_ANALYSIS.md  digest.md
job-monitoring/candidates/2025-12-01/high_priority/: 13ada39407097aee.json  19a57366efb587db.md  19be513759b66b6f.json  2c897a17c2a8c724.json  2c897a17c2a8c724.md  2f164a76fc0b4b1d.json  317c3b00519b43cb.md  32036b104c777c34.md  3ec103ddbfbe9b0e.json  4c5fdad958f670c7.md  6c4a9cfecd07ac94.md  79b0ca9c2b10c55a.json  7c8ebfdf42a41902.md  8e8eaa9e53cb6eeb.md  9d02bf34f05f45c1.json  9d02bf34f05f45c1.md  bc03e54c81d0ba71.json  dd5eeba3389392f7.json  dd5eeba3389392f7.md
job-monitoring/candidates/2025-12-01/low_priority/: 06a06778f4dc70cd.json  0ddde1ffa52689ec.md  0f3b82e0746c2180.md  106f2e502132dda6.json  13ada39407097aee.json  13ada39407097aee.md  19a57366efb587db.md  1ce13ff0bb82c914.md  2f164a76fc0b4b1d.json  2f164a76fc0b4b1d.md  30203e27cbaa2295.md  32036b104c777c34.md  3332345a8e3f754e.md  3ec103ddbfbe9b0e.json  420147e2342d628f.json  420147e2342d628f.md  42272af0c98d4326.json  42272af0c98d4326.md  4253b33d1fc44060.json  4253b33d1fc44060.md  4260ad279b1941d5.json  4260ad279b1941d5.md  571c6fc11e193de6.md  61a8b1d743181183.json  67a967fcb6c111fa.json  6c4a9cfecd07ac94.json  79b0ca9c2b10c55a.json  79b0ca9c2b10c55a.md  7c8ebfdf42a41902.md  83c49366b6e39811.md  862770183856694a.md  88caddbd8d033ba1.md  8b761c54dd5c252c.json  8b9bfc9cb6727122.json  8b9bfc9cb6727122.md  8e8eaa9e53cb6eeb.json  9d02bf34f05f45c1.md  a36552c0c7a11016.json  a36552c0c7a11016.md  a7dd1ea60ac200e5.json  (+18 more)
job-monitoring/candidates/2025-12-01/review/: 1617f263fcc2f3d2.json  1617f263fcc2f3d2.md  19be513759b66b6f.md  28b1641b0b962c45.md  2c897a17c2a8c724.md  30203e27cbaa2295.json  317c3b00519b43cb.json  317c3b00519b43cb.md  38e6af20eddd0969.md  420147e2342d628f.md  42272af0c98d4326.json  42272af0c98d4326.md  561693f02f0a7bae.json  561693f02f0a7bae.md  6c4a9cfecd07ac94.json  6c4a9cfecd07ac94.md  7c8ebfdf42a41902.json  7c8ebfdf42a41902.md  83c49366b6e39811.json  862770183856694a.json  88caddbd8d033ba1.json  88caddbd8d033ba1.md  8b9bfc9cb6727122.json  8b9bfc9cb6727122.md  (+17 more)
job-monitoring/candidates/2025-12-02/: digest.md
job-monitoring/candidates/2025-12-03/: digest.md
job-monitoring/candidates/2025-12-04/: digest.md  digest_rescored.md
job-monitoring/candidates/2025-12-05/: digest.md
job-monitoring/candidates/2025-12-10/: HIGH_PRIORITY_REVIEW.md  digest.md
job-monitoring/data/job_sources/: state.json  state.json.bak
job-monitoring/docs/: job_monitoring_implementation_plan.md  job_monitoring_workflows.md
job-monitoring/src/job_monitor/: __init__.py  cli.py  config.py  converter.py  deduplicator.py  digest.py  markdown_exporter.py  schemas.py  scorer.py  scraper.py  state.py
job-monitoring/state/: monitor_state.json  monitor_state.json.bak  search_state.json  search_state.json.bak
job-monitoring/tests/: __init__.py  test_cli.py  test_config.py  test_contact_extraction.py  test_converter.py  test_deduplicator.py  test_description_caching.py  test_digest.py  test_duunitori_details.py  test_integration.py  test_job_monitor.py  test_markdown_exporter.py  test_schemas.py  test_scorer.py  test_scraper_description.py  test_state.py
job-monitoring/tests/test_scrapers/: __init__.py  test_cvee.py  test_duunitori.py  test_registry.py  test_utils.py
(+2249 files in other folders)
